name:                registry
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/registry#readme
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5,
                       ghc-prim,
                       transformers,
                       mtl,
                       bytestring,
                       text,
                       vector,
                       QuickCheck,
                       tasty
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/registry
